fix: increase white space between validation error and input

--- a/src/components/FormLabel/FormLabel.module.scss
+++ b/src/components/FormLabel/FormLabel.module.scss
@@ -11,9 +11,4 @@
   &.disabled {
     color: var(--color-base-grey-300);
   }
-
-  .help-text {
-    margin-top: var(--INTERNAL_form-control-help-margin);
-    font-weight: var(--INTERNAL_form-control-help-font-weight);
-  }
 }
